New Particle Class Removed walls Repositioned Food items

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,8 @@
     <script src="/javascripts/util.js"></script>
     <script src="/javascripts/Ray.js"></script>
     <script src="/javascripts/Boundary.js"></script>
-    <script src="/javascripts/Particle.js"></script>
+    <script src="/javascripts/Particle1.js"></script>
+    <script src="/javascripts/Particle2.js"></script>
       <script src="/javascripts/Waypoints.js"></script>
     <script src="/javascripts/sketch.js"></script>
    <!-- <script src="/javascripts/3D.js"></script> -->
